
FRIDAY 15TH, JULY

        - Fixed a little bug with the for command. When the field "delims=;" 
          is specified with FOR without "eol=" being specified, then the 
          character ";" is not used as the default end-of-line character.

WEDNESDAY, 14TH, SEPTEMBER 2016

        - Added PUSHD and POPD commands

        - Allow to list variable which match with a prefix

FRIDAY 18TH, OCTOBER 2016

        - Removed the complex initialisation model set up the 16/04/2016 in 
          favour of a single (somewhat read-only) Dos9_Auto.bat initialization 
          script that calls automatically local and global custom 
          initialization scripts.

        - Worked a lot to improove the binary tree, in order to conform to 
          unix installation standard and windows, by the way. This is near to 
          being ready.

        - Modified the TYPE command, adding the following features :

             - The file names are now echoed throught the standard error 
               output. This new behaviour allows sorting out easily file names 
               and file contents. By the way this is also more conformant to 
               cmd.exe.

             - If no filename is specified, the TYPE command gets it input 
               from the standard input, acting quite the same as more.

             - Few documentation updates.

TUESDAY 26TH, OCTOBER

        - Fixed configure.ac bug preventing autotools from properly detect BSD 
          based OSes.

        - Lots of fixes for the libcu8 library, which was not working properly 
          on 32-bits platform. The lib now directly asks the location of 
          function using the kernel instead on relying on pointers given by 
          the libC.

        - Some minor fixes for Dos9 in general.

        - Fixed a little hlp bug 

WEDNESDAY 26TH, OCTOBER 2016

        - Rewrite Pushd and Popd commands.

        - Fix some commands help. 
