@@ -1072,13 +1072,36 @@
 </li><li><p> Few documentation updates.</p>
 
 </li></ul>
+<p>TUESDAY 26TH, OCTOBER</p>
+
+<ul><li>
+<p> Fixed configure.ac bug preventing autotools from properly detect BSD based OSes.</p>
+
+</li><li><p> Lots of fixes for the libcu8 library, which was not working properly on 32-bits platform. The lib now directly asks the location of function using the kernel instead on relying on pointers given by the libC.</p>
+
+</li><li><p> Some minor fixes for Dos9 in general.</p>
+
+</li><li><p> Fixed a little hlp bug</p>
+
 </li></ul>
-<h2>Wednesday 26th, October 2016</h2>
+<p>WEDNESDAY 26TH, OCTOBER 2016</p>
 
 <ul><li>
 <p> Rewrite Pushd and Popd commands.</p>
 
-</li><li><p> Fix some commands help. </p>
+</li><li><p> Fix some commands help.</p>
+
+</li></ul>
+<p>THURSDAY 27TH, OCTOBER</p>
+
+<ul><li>
+<p> Change location of gettext files under unices to match the usual file layout.</p>
+
+</li></ul>
+<p>FRIDAY 28TH, OCTOBER</p>
+
+<ul><li>
+<p> Fix some compilation errors. </p>
 
 </li></ul>
 
