@@ -1375,3 +1375,6 @@ ${set/p var=question}
 	- Change location of gettext files under unices to match the usual
 	file layout.
 
+{{Friday 28th, October}}
+
+	- Fix some compilation errors.
